# cpp_notepad

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
include/: compiler_defines.hpp  json_settings.hpp
src/: compiler_defines.cpp  json_settings.cpp  main.cpp
